# VersusQA

./: .gitignore  .pre-commit-config.yaml  README.md
CQAS/: .gitignore  Dockerfile  README.md  demo.py  docker-compose.yaml  main.py  raytune.py  requirements.txt  summarizer.py  test.py  test_pegasus.py  test_t5.py  train.py  train_from_checkpoint_multi_news.py  train_multi_news.py  train_pegasus.py  train_t5.py
CQI/: Dockerfile  README.md  best_models_metrics.json  demo.py  docker-compose.yaml  final_dataset_english.tsv  hyperparameter_training.py  hyperparameter_training_deberta.py  hyperparameter_training_roberta.py  main.py  paper_hyperparameter_training.py  paper_training.py  requirements.txt  test.csv  test_paper.csv  train.csv  training.py  tune_llama2_classifier.py  validate.csv  validate_paper.csv
CSI/: Dockerfile  configuration.yaml  demo.py  hyperparameter_training.py  requirements.txt  train_main.py  training.py
OAI/: Dockerfile  README.md  configuration.yaml  demo.py  docker-compose.yaml  eval_llama2_seqlabel.py  main.py  optimize_bert.py  pyproject.toml  requirements.txt  train_bert.py  train_main.py  tune_llama2_seqlabel.py  utils_bert.py
OAI/data/: test.csv  train.csv  valid.csv
OAI/train/: config.yaml  cross_val_bert.py  eval_llama2_seqlabel.py  optimize_bert.py  pyproject.toml  train_bert.py  utils_bert.py
SC/: README.md  data_preparation.py  demo.py  docker-compose.yaml  main.py  requirements.txt  train_main.py  tune_llama2_classifier.py
backend/: Dockerfile  HELP.md  LICENSE  README.md  cam.json  docker-compose-prod.yaml  pom.xml  (+1 more)
(+99 files in other folders)
