[tool.poetry]
name = "oai"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
ray = {extras = ["tune"], version = "^2.9.3"}
gradio = "^4.21.0"
fastapi = "^0.110.0"
pyyaml = "^6.0.1"
torch = "^2.2.1"
transformers = "^4.38.2"
datasets = "^2.18.0"
pandas = "^2.2.1"
numpy = "^1.26.4"
scikit-learn = "^1.4.1.post1"
tqdm = "^4.66.2"
seqeval = "^1.2.2"
evaluate = "^0.4.1"
wandb = "^0.16.4"
uvicorn = "^0.28.0"
peft = "^0.9.0"
trl = "^0.7.11"
argparse = "^1.4.0"
sentencepiece = "^0.2.0"
hyperopt = "^0.2.7"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
